--- a/Bayser-Portal/Mantenimiento/mante.css
+++ b/Bayser-Portal/Mantenimiento/mante.css
@@ -620,6 +620,58 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
     transition: width 0.1s linear;
 }
 
+/*Responsive del slider*/
+ /*SLIDER*/
+
+ .contenedor{
+	flex-basis: calc((100%)/1);
+    height:  60%;	
+    margin-left: 10px;
+    margin-right: 10px;
+    top: -5px;
+    left: -10px;
+}
+
+
+.slider-contenedor li ul{
+	flex-basis: calc((100%)/1);
+	height: 60%;
+}
+
+.slider-contenedor li img{
+	flex-basis: calc((100%)/1);
+	height: 60%;	
+	left: 0;
+	top: 0;
+}
+
+.pagination{
+	top: 85%;
+	width: 100%;
+}
+
+.pagination li{
+	font-size: 15px;
+	margin: 2px 5px;
+}
+
+.left, .right{
+	top: 0;
+	height: 100%;
+	font-size: 20px;
+}
+
+.left{
+	left: 10px;
+}
+
+.right{
+	right: 10px;
+}
+
+/*fin del Responsive del slider*/
+
+
 /*responsive parrafo instalaciones*/
 .informacion{
     /* background: red;*/
@@ -828,7 +880,63 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
     transition: width 0.1s linear;
 }
 
+/*Responsive del slider*/
+ /*SLIDER*/
+
+ .contenedor{
+	flex-basis: calc((100%)/1);
+    height:  60%;	
+    margin-left: 10px;
+    margin-right: 10px;
+    top: 10px;
+    left: -10px;
+}
+
+
+.slider-contenedor li ul{
+	flex-basis: calc((100%)/1);
+	height: 60%;
+}
+
+.slider-contenedor li img{
+	flex-basis: calc((100%)/1);
+	height: 60%;	
+	left: 0;
+	top: 0;
+}
+
+.pagination{
+	top: 88%;
+	width: 100%;
+}
+
+.pagination li{
+	font-size: 18px;
+	margin: 2px 5px;
+}
+
+.left, .right{
+	top: 0;
+	height: 100%;
+	font-size: 25px;
+}
+
+.left{
+	left: 10px;
+}
+
+.right{
+	right: 10px;
+}
+
+/*fin del Responsive del slider*/
+
 /*responsive parrafo instalaciones*/
+h1{
+    position: relative;
+    top: 10px;
+}
+
 .informacion{
     /*background: red;
     border: 1px solid green;*/
@@ -1046,7 +1154,64 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
     transition: width 0.1s linear;
 }        
 
+/*Responsive del slider*/
+ /*SLIDER*/
+
+ .contenedor{
+	flex-basis: calc((100%)/1);
+    height:  60%;	
+    margin-left: 10px;
+    margin-right: 10px;
+    top: 10px;
+    left: -10px;
+}
+
+
+.slider-contenedor li ul{
+	flex-basis: calc((100%)/1);
+	height: 60%;
+}
+
+.slider-contenedor li img{
+	flex-basis: calc((100%)/1);
+	height: 60%;	
+	left: 0;
+	top: 0;
+}
+
+.pagination{
+	top: 88%;
+	width: 100%;
+}
+
+.pagination li{
+	font-size: 25px;
+	margin: 2px 5px;
+}
+
+.left, .right{
+	top: 0;
+	height: 100%;
+	font-size: 30px;
+}
+
+.left{
+	left: 10px;
+}
+
+.right{
+	right: 10px;
+}
+
+/*fin del Responsive del slider*/
+
+
 /*responsive parrafo instalaciones*/
+
+h1{
+    top: 15px;
+}
+
 .informacion{
     /* background: red;
      border: 1px solid green;*/
@@ -1234,6 +1399,57 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
     width: 60%;
     transition: width 0.1s linear;
 }
+
+/*Responsive del slider*/
+ /*SLIDER*/
+
+ .contenedor{
+	flex-basis: calc((100%)/1);
+    height:  450px;
+    margin-left: 10px;
+    margin-right: 10px;
+    top: 0;
+    left: -10px;
+}
+
+
+.slider-contenedor li ul{
+	flex-basis: calc((100%)/1);
+    height: 450px;
+}
+
+.slider-contenedor li img{
+	flex-basis: calc((100%)/1);
+	height: 450px;	
+	left: 0;
+	top: 0;
+}
+
+.pagination{
+	top: 88%;
+	width: 100%;
+}
+
+.pagination li{
+	font-size: 35px;
+	margin: 2px 5px;
+}
+
+.left, .right{
+	top: 0;
+	height: 100%;
+	font-size: 40px;
+}
+
+.left{
+	left: 10px;
+}
+
+.right{
+	right: 10px;
+}
+
+/*fin del Responsive del slider*/
 
 /*responsive parrafo instalaciones*/
 .informacion{
