--- a/Bayser-Portal/bayser diseño 2/estilolanding.css
+++ b/Bayser-Portal/bayser diseño 2/estilolanding.css
@@ -16,7 +16,7 @@ body{
 .boton_p{
     position: relative;
     right: 10px;
-    top: 400px;
+    top: 300px;
     margin: 0;
     padding: 0;
     display: flex;
@@ -102,7 +102,7 @@ a:hover span:nth-child(4){
 }
 
 header{
-    background-image: url(img/mainbayser8.jpg);
+    background-image: url(img/form_fondo.jpg);
     height: 100vh;
     background-size: cover;
     background-position: center;
