--- a/Bayser-Portal/Formulario 2/formulario2.css
+++ b/Bayser-Portal/Formulario 2/formulario2.css
@@ -158,6 +158,7 @@ input.error {
     color:#2196f3;
 }
 
+
 .informacion .form .form-header .form-title{
     font-weight: normal;
     font-family: sans-serif;
@@ -178,16 +179,16 @@ input.error {
 }
 
 .informacion .form{
-    position: absolute;
-    top: 50px;
-    right: 330px;
+    /*position: absolute;*/
+   /* top: 50px;
+    right: 330px;*/
     background: rgba(0,0,0,.6);
-    width: 100%;
-    max-width: 650px;
+    /*width: 100%;
+    max-width: 650px;*/
     margin: auto;
     padding: 5px 35px;
     /* margin-top: 30px; */
-    padding-bottom: 30px;
+   /* padding-bottom: 30px;*/
     border-radius: 3px;    
 }
 
@@ -533,6 +534,83 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
     transition: width 0.1s linear;
 }
 
+/*responsive del formulario*/
+.informacion{
+    position: relative;
+}
+.satisfaccion{
+    display: inline-flex;
+    flex-direction: row;
+    /*flex-basis: 100%;*/
+    width: 100%;
+    background: rgba(0,0,0,.5);
+}    
+.col-12{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-basis: calc(100%/1);
+    justify-content: center;
+    /*! width: ; */
+    border: none;
+}
+
+
+.rdb{
+    display: flex;
+    justify-content: center;
+}
+.informacion .form{
+    /* position: relative;*/
+    margin-top: 100px;
+     bottom: 0px;
+     right: 330px;
+     background: rgba(0,0,0,.6);
+     width: 100%;
+     max-width: 650px;
+     margin: auto;
+     padding: 5px 35px;
+     /* margin-top: 30px; */
+     padding-bottom: 30px;
+     border-radius: 3px;    
+ }
+ 
+ .informacion .form .form-uni{
+     display: block;
+     color: #fff;
+     font-size: 16px;
+     font-family: Roboto;
+    position: absolute;
+     top: -52px;
+     left: 400px;
+     /*margin-right: 50px;*/
+     margin: -28px;
+     padding: 0;
+     width: 10px;
+     
+     /* width: 50%;
+     padding: 10px;
+     margin-bottom: 20px;
+     border-radius: 2px;
+     font-size: 14px;
+     color: #FFF;
+     font-family: Roboto;    */
+ 
+ }
+
+ .informacion .form .form_select{
+    background: rgba(0,0,0,.7);
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #276ff5;
+    width: 55%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 2px;
+    font-size: 14px;
+    color: #FFF;
+    font-family: Roboto;   
+}
 /*responsive del footer*/
 .col-3{
     display: block;
@@ -664,6 +742,84 @@ header nav ul.hidden .btn_hamburger div:nth-child(1){
 header nav ul.hidden .btn_hamburger div:nth-child(3){
     width: 60%;
     transition: width 0.1s linear;
+}
+
+/*responsive del formulario*/
+.informacion{
+    position: relative;
+}
+.satisfaccion{
+    display: inline-flex;
+    flex-direction: row;
+    /*flex-basis: 100%;*/
+    width: 100%;
+    background: rgba(0,0,0,.5);
+}    
+.col-12{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-basis: calc(100%/1);
+    justify-content: center;
+    /*! width: ; */
+    border: none;
+}
+
+
+.rdb{
+    display: flex;
+    justify-content: center;
+}
+.informacion .form{
+    /* position: relative;*/
+    margin-top: 100px;
+     bottom: 0px;
+     right: 330px;
+     background: rgba(0,0,0,.6);
+     width: 100%;
+     max-width: 650px;
+     margin: auto;
+     padding: 5px 35px;
+     /* margin-top: 30px; */
+     padding-bottom: 30px;
+     border-radius: 3px;    
+ }
+ 
+ .informacion .form .form-uni{
+     display: block;
+     color: #fff;
+     font-size: 16px;
+     font-family: Roboto;
+    position: absolute;
+     top: -52px;
+     left: 400px;
+     /*margin-right: 50px;*/
+     margin: -28px;
+     padding: 0;
+     width: 10px;
+     
+     /* width: 50%;
+     padding: 10px;
+     margin-bottom: 20px;
+     border-radius: 2px;
+     font-size: 14px;
+     color: #FFF;
+     font-family: Roboto;    */
+ 
+ }
+
+ .informacion .form .form_select{
+    background: rgba(0,0,0,.7);
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #276ff5;
+    width: 55%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 2px;
+    font-size: 14px;
+    color: #FFF;
+    font-family: Roboto;   
 }
 
 /*responsive del footer*/
@@ -809,6 +965,83 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
     transition: width 0.1s linear;
 }
 
+/*responsive del formulario*/
+.informacion{
+    position: relative;
+}
+.satisfaccion{
+    display: inline-flex;
+    flex-direction: row;
+    /*flex-basis: 100%;*/
+    width: 100%;
+    background: rgba(0,0,0,.5);
+}    
+.col-12{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-basis: calc(100%/1);
+    justify-content: center;
+    /*! width: ; */
+    border: none;
+}
+
+
+.rdb{
+    display: flex;
+    justify-content: center;
+}
+.informacion .form{
+    /* position: relative;*/
+    margin-top: 100px;
+     bottom: 0px;
+     right: 330px;
+     background: rgba(0,0,0,.6);
+     width: 100%;
+     max-width: 650px;
+     margin: auto;
+     padding: 5px 35px;
+     /* margin-top: 30px; */
+     padding-bottom: 30px;
+     border-radius: 3px;    
+ }
+ 
+ .informacion .form .form-uni{
+     display: block;
+     color: #fff;
+     font-size: 16px;
+     font-family: Roboto;
+    position: absolute;
+     top: -52px;
+     left: 400px;
+     /*margin-right: 50px;*/
+     margin: -28px;
+     padding: 0;
+     width: 10px;
+     
+     /* width: 50%;
+     padding: 10px;
+     margin-bottom: 20px;
+     border-radius: 2px;
+     font-size: 14px;
+     color: #FFF;
+     font-family: Roboto;    */
+ 
+ }
+
+ .informacion .form .form_select{
+    background: rgba(0,0,0,.7);
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #276ff5;
+    width: 55%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 2px;
+    font-size: 14px;
+    color: #FFF;
+    font-family: Roboto;   
+}
 /*responsive del footer*/
 .col-3{
     flex-basis: calc(100%/3);
