--- a/Bayser-Portal/Formulario 2/formulario2.css
+++ b/Bayser-Portal/Formulario 2/formulario2.css
@@ -143,6 +143,9 @@ header .btn_hamburger div{
 
 /*FORMULARIO*/
 
+.contenido{
+    padding-top:  100px;
+}
  input.error {
     outline-style: solid;
     outline-color: maroon;
@@ -195,7 +198,7 @@ input.error {
 .informacion .form .form-label{
     display: flex;
     color: #276ff5;
-    font-size: 16px;
+ /*   font-size: 16px;*/
     font-family: Roboto;
     /*position: relative;*/
 }
@@ -578,7 +581,7 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
  .informacion .form .form-uni{
      display: block;
      color: #fff;
-     font-size: 16px;
+     font-size: 5px;
      font-family: Roboto;
     position: absolute;
      top: -52px;
