--- a/Bayser-Portal/Formulario 1/formulario1.css
+++ b/Bayser-Portal/Formulario 1/formulario1.css
@@ -612,8 +612,8 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
      font-size: 16px;
      font-family: Roboto;
     position: absolute;
-     top: -52px;
-     left: 400px;
+     top: 28px;
+     left: 200px;
      /*margin-right: 50px;*/
      margin: -28px;
      padding: 0;
@@ -629,6 +629,27 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
  
  }
 
+ .informacion .form .form-extra{
+    /* Prueba Posicion */
+    position: relative;
+    display: flex;
+    left: -1px;
+    top: 1px;
+
+    background: rgba(0,0,0,.7);
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #276ff5;
+    width: 115px;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 2px;
+    font-size: 14px;
+    color: #FFF;
+    font-family: Roboto; 
+
+}
+
  .informacion .form .form_select{
     background: rgba(0,0,0,.7);
     border: none;
@@ -641,6 +662,13 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
     font-size: 14px;
     color: #FFF;
     font-family: Roboto;   
+}
+
+.seleccion{
+    display: block;
+    width: 100%;
+    height: 85px;
+    position: relative;
 }
 /*responsive del footer*/
 .col-3{
@@ -670,7 +698,7 @@ footer{
 
 .icono-ubicacion{
     display: inline;
-    height: inherit;
+    /* height: inherit; */
 }
 
 .icon-location{
@@ -685,7 +713,7 @@ footer{
 
 .icono-horario{
     display: inline;
-    height: inherit;
+    /* height: inherit; */
 }
 
 .icon-time{
@@ -827,6 +855,13 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
     font-size: 14px;
     color: #FFF;
     font-family: Roboto;   
+}
+
+.seleccion{
+    display: block;
+    width: 100%;
+    height: 85px;
+    position: relative;
 }
 
 /*responsive del footer*/
@@ -994,7 +1029,7 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
      font-size: 16px;
      font-family: Roboto;
      /*position: relative;*/
-     top: -52px;
+     top: 26px;
      left: 458px;
      margin: -28px;
      padding: 0;
@@ -1009,6 +1044,34 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
      font-family: Roboto;    */
  
  }
+
+ .informacion .form .form-extra{
+    /* Prueba Posicion */
+    position: relative;
+    display: flex;
+    left: -1px;
+    top: 1px;
+
+    background: rgba(0,0,0,.7);
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #276ff5;
+    width: 150px;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 2px;
+    font-size: 14px;
+    color: #FFF;
+    font-family: Roboto; 
+
+}
+
+ .seleccion{
+    display: block;
+    width: 100%;
+    height: 85px;
+    position: relative;
+}
 
 /*responsive del footer*/
 .col-3{
@@ -1160,6 +1223,27 @@ header nav ul.hidden .btn_hamburger div:nth-child(3){
     font-size: 14px;
     color: #FFF;
     font-family: Roboto;    */
+
+}
+
+.informacion .form .form-extra{
+    /* Prueba Posicion */
+    position: relative;
+    display: flex;
+    left: -1px;
+    top: 1px;
+
+    background: rgba(0,0,0,.7);
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #276ff5;
+    width: 150px;
+    padding: 10px;
+    margin-bottom: 20px;
+    border-radius: 2px;
+    font-size: 14px;
+    color: #FFF;
+    font-family: Roboto; 
 
 }
 /*responsive del footer*/
